--- a/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
@@ -328,7 +328,7 @@
             </Grid>
         </Grid>
 
-        <Grid Background="{DynamicResource RegionBrush}">
+        <Grid Background="{DynamicResource RegionBrush}" Visibility="Collapsed">
 
             <Label
              Grid.Row="1"
