--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -126,6 +126,7 @@
                          Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
                          Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
                          Header="Integrated Tools"
+                         Visibility="Collapsed"
                          >
                             <hc:SideMenuItem.Icon>
                                 <iconPacks:Codicons
@@ -159,7 +160,7 @@
                          Margin="0,0,0,0"
                          Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
                          Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                         Header="Account"
+                         Header="Profile"
                          IsSelected="False"
                          Visibility="Collapsed"
                          >
