--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -6,11 +6,30 @@
  xmlns:local="clr-namespace:WolvenKit.Views.Foundation"
  xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
  xmlns:vm="clr-namespace:WolvenKit.Views.ViewModels"
- >
+ xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
+ xmlns:views="clr-namespace:WolvenKit.Views.Editor">
 
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <DataTemplate DataType="{x:Type viewmodels:LogViewModel}">
+                        <Grid>
+                            <views:LogView />
+                        </Grid>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type viewmodels:PropertiesViewModel}">
+                        <Grid>
+                            <views:PropertiesView />
+                        </Grid>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type viewmodels:ProjectExplorerViewModel}">
+                        <Grid>
+                            <views:ProjectExplorerView />
+                        </Grid>
+                    </DataTemplate>
+                </ResourceDictionary>
+
                 <ResourceDictionary>
                     <vm:RootViewModel x:Key="ViewModel" />
                 </ResourceDictionary>
