--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -5,9 +5,10 @@
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:local="clr-namespace:WolvenKit.Views.Foundation"
  xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
- xmlns:vm="clr-namespace:WolvenKit.Views.ViewModels"
  xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
- xmlns:views="clr-namespace:WolvenKit.Views.Editor">
+ xmlns:views="clr-namespace:WolvenKit.Views.Editor"
+ xmlns:vm="clr-namespace:WolvenKit.Views.ViewModels"
+ >
 
     <Application.Resources>
         <ResourceDictionary>
@@ -96,6 +97,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Syncfusion.Themes.MaterialDark.WPF;Component/PropertyGrid/PropertyGrid.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Syncfusion.Themes.MaterialDark.WPF;Component/Ribbon/Ribbon.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Syncfusion.Themes.MaterialDark.WPF;Component/SfRadialMenu/SfRadialMenu.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Syncfusion.Themes.MaterialDark.WPF;Component/DockingManager/DockingManager.xaml" />
 
                 <ResourceDictionary Source="pack://application:,,,/Syncfusion.Themes.MaterialDark.WPF;Component/EditControl/EditControl.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Syncfusion.Themes.MaterialDark.WPF;Component/SfRichTextBoxAdv/SfRichTextBoxAdv.xaml" />
