Added numb global searchbar for settings.

--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -221,6 +221,9 @@
             </syncfusion:SfAccordion>
 
         </Grid>
+        <hc:TransitioningContentControl TransitionMode="Left2RightWithFade">
+            <hc:SearchBar Margin="200,40,200,0" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
+        </hc:TransitioningContentControl>
         <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
             <StackPanel
