--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -7,6 +7,7 @@
  xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
  xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
  xmlns:views="clr-namespace:WolvenKit.Views.Editor"
+ xmlns:views1="clr-namespace:WolvenKit.Views.Editor.VisualEditor"
  xmlns:vm="clr-namespace:WolvenKit.Views.ViewModels"
  >
 
@@ -37,6 +38,87 @@
                     <DataTemplate DataType="{x:Type viewmodels:DocumentViewModel}">
                         <Grid>
                             <views:DocumentView />
+                        </Grid>
+                    </DataTemplate>
+
+
+
+
+                    <DataTemplate DataType="{x:Type viewmodels:ImportExportViewModel}">
+                        <Grid>
+                            <views:ImportExportView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:BulkEditorViewModel}">
+                        <Grid>
+                            <views:BulkEditorView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:CodeEditorViewModel}">
+                        <Grid>
+                            <views:CodeEditorView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:CsvEditorViewModel}">
+                        <Grid>
+                            <views:CsvEditorView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:HexEditorViewModel}">
+                        <Grid>
+                            <views:HexEditorView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:JournalEditorViewModel}">
+                        <Grid>
+                            <views:JournalEditorView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:VisualEditorViewModel}">
+                        <Grid>
+                            <views1:VisualEditorView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:CR2WToTextToolViewModel}">
+                        <Grid>
+                            <views:CR2WToTextToolView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:GameDebuggerToolViewModel}">
+                        <Grid>
+                            <views:GameDebuggerToolView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:ImporterToolViewModel}">
+                        <Grid>
+                            <views:ImporterToolView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:MenuCreatorToolViewModel}">
+                        <Grid>
+                            <views:MenuCreatorToolView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:WccToolViewModel}">
+                        <Grid>
+                            <views:WccToolView />
+                        </Grid>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type viewmodels:PluginManagerViewModel}">
+                        <Grid>
+                            <views:PluginManagerView />
                         </Grid>
                     </DataTemplate>
                 </ResourceDictionary>
