--- a/WolvenKit.App/Controls/AddPathDialogView.xaml
+++ b/WolvenKit.App/Controls/AddPathDialogView.xaml
@@ -22,7 +22,17 @@
                              HorizontalAlignment="Right"
                              Command="{Binding OpenDialogCommand}"
                              >
-            Open_folder_icon_here
+            <iconPacks:PackIconCodicons
+                             Grid.Row="0"
+                             Width="15"
+                             Height="15"
+                             Margin="0,0,0,0"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Center"
+                             Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                             Kind="FolderOpened"
+                             Spin="False"
+                             SpinAutoReverse="False" />
         </Button>
         <hc:TextBox
                              x:Name="filePathTextBox"
