--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -8,6 +8,8 @@
  xmlns:fluent="urn:fluent-ribbon"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+ xmlns:local="clr-namespace:WolvenKit.Views.Editor"
+ xmlns:local1="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
  xmlns:others="clr-namespace:WolvenKit.Views.Others"
  xmlns:sfskin="clr-namespace:Syncfusion.SfSkinManager;assembly=Syncfusion.SfSkinManager.WPF"
@@ -100,7 +102,10 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+
+
         </ResourceDictionary>
+
     </UserControl.Resources>
 
     <Grid Background="{DynamicResource ContentBackgroundAlt2}">
@@ -151,6 +156,312 @@
 
             <!--  Contextual Tabs  -->
             <syncfusion:Ribbon.ContextTabGroups>
+                <!--  Contextual Project Explorer group  -->
+                <syncfusion:ContextTabGroup
+                 x:Name="projectexplorercontextab"
+                 Height="90"
+                 Margin="14"
+                 IsGroupVisible="True"
+                 Label="PROJECT EXPLORER"
+                 >
+                    <syncfusion:RibbonTab Caption="FILE" IsChecked="True">
+                        <!--  File bar  -->
+                        <syncfusion:RibbonBar
+                         Name="Actions"
+                         Width="auto"
+                         Header="File"
+                         >
+                            <!--  Open File Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="OpenFileContext"
+                             Command="{catel:CommandManagerBinding Application.OpenFile}"
+                             CommandParameter="{Binding SelectedItem}"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Open"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="File"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Copy File Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="CopyFileContext"
+                             Command="{Binding CopyFileCommand}"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Copy"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconVaadinIcons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="CopyOutline"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Paste File Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="PasteFileContext"
+                             Command="{Binding PasteFileCommand}"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Paste"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconVaadinIcons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="Paste"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Delete File Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="DeleteFileContext"
+                             Command="{Binding DeleteFileCommand}"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Delete"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconMaterialLight
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="Delete"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Rename File Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="RenameFileContext"
+                             Command="{Binding RenameFileCommand}"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Rename"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconBoxIcons
+                                         Width="auto"
+                                         Height="auto"
+                                         MaxWidth="25"
+                                         MaxHeight="34"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="RegularRename"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+
+                            <!--  Open in FileExplorer Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="OpeninFileContext"
+                             Command="{Binding OpenInFileExplorerCommand}"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Open in File Explorer"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="FolderOpened"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Export File - Simple Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="ExportSimpleContext"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             IsEnabled="False"
+                             Label="Simple Export"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="Export"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Export File - Advanced Button  -->
+                            <syncfusion:RibbonButton
+                             x:Name="ExportAdvancedContext"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             IsEnabled="False"
+                             Label="Advanced Export"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="Tools"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+                        </syncfusion:RibbonBar>
+                        <!--  Tree bar  -->
+                        <syncfusion:RibbonBar
+                         Name="ActionsView"
+                         Width="auto"
+                         Header="View"
+                         >
+                            <!--  Expand All Nodes  -->
+                            <syncfusion:RibbonButton
+                             x:Name="ExandAllNodesContext"
+                             Click="ExandAllNodesContext_Click"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Expand all nodes"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="ExpandAll"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Collapse All Nodes  -->
+                            <syncfusion:RibbonButton
+                             x:Name="collapseAllNodesContext"
+                             Click="collapseAllNodesContext_Click"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Collapse all nodes"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="CollapseAll"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  Expand Children Nodes  -->
+                            <syncfusion:RibbonButton
+                             x:Name="ExandChildrenContext"
+                             Click="ExandChildrenContext_Click"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Expand Children"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconBootstrapIcons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="ArrowsExpand"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
+                            <!--  collapse Children Nodes  -->
+                            <syncfusion:RibbonButton
+                             x:Name="CollapseChildrenContext"
+                             Click="CollapseChildrenContext_Click"
+                             IconStretch="Fill"
+                             IconType="Icon"
+                             Label="Collapse Children"
+                             SizeForm="Large"
+                             >
+
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconBootstrapIcons
+                                         Width="auto"
+                                         Height="auto"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Stretch"
+                                         Kind="ArrowsCollapse"
+                                         />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+                        </syncfusion:RibbonBar>
+
+
+                    </syncfusion:RibbonTab>
+                    <syncfusion:RibbonTab Caption="??" IsChecked="False" />
+                </syncfusion:ContextTabGroup>
                 <!--  Contextual CR2W group  -->
                 <syncfusion:ContextTabGroup
                  x:Name="cr2wcontextab"
@@ -162,17 +473,7 @@
                     <syncfusion:RibbonTab Caption="EDIT" IsChecked="True" />
                     <syncfusion:RibbonTab Caption="??" IsChecked="False" />
                 </syncfusion:ContextTabGroup>
-                <!--  Contextual Project Explorer group  -->
-                <syncfusion:ContextTabGroup
-                 x:Name="projectexplorercontextab"
-                 Height="90"
-                 Margin="14"
-                 IsGroupVisible="True"
-                 Label="PROJECT EXPLORER"
-                 >
-                    <syncfusion:RibbonTab Caption="FILE" IsChecked="True" />
-                    <syncfusion:RibbonTab Caption="??" IsChecked="False" />
-                </syncfusion:ContextTabGroup>
+
                 <!--  Contextual Asset Browser group  -->
                 <syncfusion:ContextTabGroup
                  x:Name="abcontextab"
@@ -1195,7 +1496,7 @@
                             </DataTemplate>
                         </syncfusion:RibbonButton.IconTemplate>
                     </syncfusion:RibbonButton>
-                   
+
                 </syncfusion:RibbonBar>
                 <!--  Help bar  -->
                 <syncfusion:RibbonBar
